Add new schemas to docs for better understanding
